@@ -13,7 +13,7 @@
 	<!-- ###LOOP:GROUPS### begin -->
 	<!-- ###LOOP_CONTENT### -->
 	<li>
-		###GROUP.NAME###
+		###LINK:###GROUP.NAME###|###TS:plugin.tx_community.pages.groupProfile###|tx_community[group]=###GROUP.UID######
 	</li>
 	<!-- ###LOOP_CONTENT### -->
 	<!-- ###LOOP:GROUPS### end -->
